# django-flantastic

./: .gitignore  .travis.yml  Dockerfile  README.md  changelog.md  manage.py  pyproject.toml  quicktest.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: bakeries_downloader.py  bakeries_importer.py  bakery_filter.py  definitions.py
flantastic/: __init__.py  admin.py  apps.py  definitions.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py
flantastic/api/: serializers.py  viewsets.py
flantastic/data/: __init__.py  bakeries_downloader.py  bakeries_importer.py  bakery_data_splitter.py  bakery_filter.py  definitions.py
flantastic/flantastic/: admin.py  definitions.py  models.py  settings.py  wsgi.py
flantastic/flantastic/data/: bakeries_importer.py
flantastic/management/commands/: import_initial_data.py
flantastic/migrations/: 0001_initial.py  0002_bakeries_modified_date.py  0002_float_global_note.py  0003_auto_20191007_0933.py  0004_auto_20191020_1745.py  0005_auto_20191020_1844.py  0006_auto_20191027_1458.py  0007_auto_20191027_1650.py  0008_auto_20191101_1540.py  0009_vote_modified_date.py  0010_auto_20191103_1551.py
flantastic/static/flantastic/css/: headerbar.css  login.css  mapstyle.css  sidemenu.css  signup.css  style.css
flantastic/static/flantastic/js/: map_init.js  serviceworker.js  sidemenu.js
flantastic/templates/: maplayer.html
flantastic/templates/flantastic/: base.html  headerbar.html  login.html  maplayer.html  sidemenu.html  signup.html
flantastic/tests/: test_api.py  test_model.py
mysite/: settings.py  urls.py
