[tool.poetry]
name = "flantastic"
version = "0.1.0"
description = ""
authors = ["Loic MARTEL"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^2.2"
pandas = "^0.25.1"
django-leaflet = "^0.24.0"
tqdm = "^4.36.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pep8 = "^1.7"
docutils = "^0.15.2"
pylint = "^2.4"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
